<resources>
    <string name="app_name">Filiw</string>
    <string name="title_activity_show_topics">activity_show_topics</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_show_chat">activity_show_chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="h_filiw">Η Φιλιώ</string>
    <string name="plhktrologhste_to_onoma_sas">Πληκτρολογήστε το όνομά σας</string>
    <string name="onoma_xrhsth">Όνομα χρήστη</string>
    <string name="synexeia">συνεχεια</string>
    <string name="to_steki_ths_filiws">Το στέκι της Φιλιώς</string>
    <string name="available_conversations_gr">Διαθέσιμες συνομιλίες</string>
    <string name="go_back_button">Go back button</string>
    <string name="send_message_button">send message button</string>
    <string name="insert_file_button">insert file button</string>
    <string name="gallery_button">gallery button</string>
    <string name="trabhxte_fwto">Τραβήξτε\nΦωτογραφία</string>
    <string name="fwto_apo_mnhmh">Φωτογραφία\nαπό τη μνήμη</string>
    <string name="Piso">Πίσω</string>
    <string name="image_to_send">image to send</string>
    <string name="filiwpineikafee">Filiw pinei Kafe</string>
    <string name="backkk">BACK</string>
    <string name="pisw">ΠΙσω</string>
    <string name="url">URL</string>
    <string name="loc">Local</string>
    <string name="w">Raw</string>
    <string name="camera">Καμερα</string>
    <string name="send">Αποστολή</string>
    <string name="album">Συλλογή</string>
    <string name="seeurphoto">Η φωτογραφία σας θα προβληθεί παρακάτω</string>
    <string name="choosefrom">Επιλογή από:</string>
    <string name="canc">Ακύρωση</string>
    <string name="came">Καμερα</string>
    <string name="sendd">Αποστολή</string>
    <string name="alb">Συλλογή</string>
    <string name="choosefromm">Επιλογή από:</string>
    <string name="cancel">Ακύρωση</string>
    <string name="choosesend">Επιλέξτε αποστολή για να στείλετε το βίντεο</string>
</resources>